# ChangeLog for app-accessibility/nfbtrans
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/nfbtrans/ChangeLog,v 1.12 2008/01/06 19:00:54 williamh Exp $

  06 Jan 2008; William Hubbs <williamh@gentoo.org>
  -files/nfbtrans-7.70-gentoo-fix.patch, -nfbtrans-7.70.ebuild:
  Removed old version.

  02 Jun 2007; deedra waters <dmwaters@gentoo.org> nfbtrans-7.74.ebuild:
  Adding ~amd64 keyword.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  27 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> nfbtrans-7.74.ebuild:
  Stable on ppc.

  30 Oct 2004; William Hubbs,,, <williamh@gentoo.org> nfbtrans-7.74.ebuild:
  Moved to stable x86.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  nfbtrans-7.70.ebuild:
  Masked nfbtrans-7.70.ebuild stable for ppc

*nfbtrans-7.74 (21 Sep 2004)

  21 Sep 2004; William Hubbs,,, <williamh@gentoo.org>
  +files/nfbtrans-7.74-gentoo-fix.patch, +nfbtrans-7.74.ebuild:
  Version Bump

  02 Jun 2004; William Hubbs,,, <williamh@gentoo.org> nfbtrans-7.70.ebuild:
  Moved to stable x86.

  02 May 2004; David Holm <dholm@gentoo.org> nfbtrans-7.70.ebuild:
  Added to ~ppc.

*nfbtrans-7.70 (01 May 2004)

  01 May 2004; William Hubbs,,, <williamh@gentoo.org> nfbtrans-7.70.ebuild,
  files/nfbtrans-7.70-gentoo-fix.patch:
  Initial commit.
