@@ -1,5 +1,5 @@
 AUX nfbtrans-7.74-gentoo-fix.patch 310 RMD160 03ed1f49f1b3c9736264f079fb000a523207c02f SHA1 6e19dc5a10e58300ef5a3f2d7373f3b0985bed71 SHA256 6bd60b185caa76564dad6c0a0aacad9f6cb1df1f32c0725cf63ed5fe86acf556
 DIST nfbtr774.zip 470847 RMD160 af7c3286363b50668c1fe3e05e5be4570571f718 SHA1 647d2aa6dcd04ed9fa1552c38b27b123019ee4a9 SHA256 87cad2aa875f44ad6035f5af080e02ecc23a8c3718e3e1943cb3a006c5fc93ec
-EBUILD nfbtrans-7.74.ebuild 927 RMD160 d1b674fa2d97db7ed1214bca77fd836ca5971e1a SHA1 3c62b55e27b32427fd4eb244c41c10bcdc11150f SHA256 af97b0b0ab3742edab1138c4241edb5d122d7f1d4b73f651ba68ec281c1c5934
-MISC ChangeLog 1515 RMD160 9a5c10853da760041979662ad37a86c212aee9a1 SHA1 22133435b3c70f0e677f205c2e82b340a5601eaa SHA256 67df3b19868daf34936169b3f0d467a4b2c5ed02cc19f4a0a06dbf3ae7e2a814
+EBUILD nfbtrans-7.74.ebuild 937 RMD160 f212e283a84dad3dfd9a76b8feeff25402bf27d7 SHA1 89db1de9899c2e1103977e78b13fcf9fc6fe8972 SHA256 04d1df2c8e331506a3cfe52c7f512c4aeb0b9cbfb19473f06df3bb477b8f36d2
+MISC ChangeLog 1741 RMD160 2774010c50092cd30cbab2c2b1dda097f4b1a497 SHA1 c6a5d455bcf04289a472764173e8841627845df8 SHA256 094e6927766be12e41d27eff6fd28a9ef83c135081119b4b01bc8d9eeb1bc5b0
 MISC metadata.xml 231 RMD160 054f5d191e7b9a652b1aab439e1afdd5c50cd413 SHA1 c9080a031f8ef43e7e6d3e840390428a234e5c80 SHA256 440ddcc5e65f0d7dfd084eb51b19a637d25e434400b1d6d9a3ac997e3d4c6f88
