@@ -1,21 +1,20 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/nfbtrans/nfbtrans-7.74.ebuild,v 1.6 2008/01/06 19:00:54 williamh Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/nfbtrans/nfbtrans-7.74.ebuild,v 1.7 2009/01/10 17:44:39 williamh Exp $
 
 inherit eutils
 
 DESCRIPTION="braille translator from the National Federation of the Blind"
-HOMEPAGE="http://www.nfb.org/nfbtrans.htm"
-SRC_URI="http://www.nfb.org/braille/nfbtrans/nfbtr774.zip"
+HOMEPAGE="http://www.nfb.org/nfb/nfbtrans.asp"
+SRC_URI="http://www.nfb.org/Images/nfb/Products_Technology/nfbtr774.zip"
 
 LICENSE="public-domain"
 SLOT="0"
 KEYWORDS="~amd64 ppc x86"
 IUSE=""
 
-RDEPEND="virtual/libc"
-DEPEND="${RDEPEND}
-	>=app-arch/unzip-5.50-r2"
+DEPEND=" >=app-arch/unzip-5.50-r2"
+RDEPEND=""
 
 S=${WORKDIR}
 
@@ -28,7 +27,7 @@ src_unpack() {
 }
 
 src_compile() {
-	make LIBS= CFLAGS="${CFLAGS} -DLINUX" all || die
+	make CC=$(tc-getCC) LIBS= CFLAGS="${CFLAGS} -DLINUX" all || die
 }
 
 src_install() {
