@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/nfbtrans
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/nfbtrans/ChangeLog,v 1.12 2008/01/06 19:00:54 williamh Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/nfbtrans/ChangeLog,v 1.13 2009/01/10 17:44:39 williamh Exp $
+
+  10 Jan 2009; William Hubbs <williamh@gentoo.org> nfbtrans-7.74.ebuild:
+  I removed virtual/libc from depend and set rdepend correctly. The SRC_URI
+  and HOMEPAGE were updated. The CC variable is now respected, bug #243310.
 
   06 Jan 2008; William Hubbs <williamh@gentoo.org>
   -files/nfbtrans-7.70-gentoo-fix.patch, -nfbtrans-7.70.ebuild:
